--- a/src/main/resources/templates/cloud.html
+++ b/src/main/resources/templates/cloud.html
@@ -1,8 +1,7 @@
     
 <div id="tagcloud" th:style="${'line-height:' + tags_max_pts+'px;'}">
 	
-	  <span th:each="tag : ${tags}" th:style="${'font-size:' + tag.count+'px;'}">
+	  <span th:each="tag : ${tags}" th:style="${'font-size:' + tag.fontsize+'px;'}">
 		 <a th:href="${'/tag/' + tag.words}" th:text="${tag.words}">View</a>
-		&nbsp;
-	 </span>
+	 </span>&nbsp;
 </div>
